--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="webstudio" content="How to find solution for your business, initial-scale=1.0">
     <title>Webstudio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css" 
+    integrity="sha512-gnAN+RgTMylunXI7AMg+PtcUGpKZFkZJoFIkAWvdPFRrFJz3p2tx4+9xbjILRfN7CzoViMgS8vSf06fSQzWZjA==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap" 
+rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 <header>
-    <a href="">WEBSTUDIO</a>
+    <a href=""><span>WEB</span>STUDIO</a>
     <nav>
         <ul>
             <li><a href="" target="_blank">Studio</a></li>
@@ -85,9 +92,44 @@
                 </li>
             </ul>
         </section>
+<section>
+    <h2>Our Portfolio</h2>
+    <ul>
+        <li>
+            <img src="./images/image-1.jpg" alt="bank app">
+            <h3>Banking App</h3>
+            <p>App</p>
+        </li>
+        <li>
+            <img src="./images/image-2.jpg" alt="scanning qr-code">
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+        </li>
+        <li>
+            <img src="./images/image-3.jpg" alt="laptop with bright screen">
+            <h3>Meditation App</h3>
+            <p>App</p>
+        </li>
+        <li>
+            <img src="./images/image-4.jpg" alt="hands on the wheel of the car">
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+        </li>
+        <li>
+            <img src="./images/image-5.jpg" alt="phone with different wallpapers">
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+        </li>
+        <li>
+            <img src="./images/image-6.jpg" alt="girl listening to music in a headphones">
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+        </li>
+    </ul>
+</section>
 </main>
 <footer>
-    <a href="">WEBSTUDIO</a>
+    <a href=""><span>WEB</span>STUDIO</a>
 <p>
 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
 </p>
