--- a/index.html
+++ b/index.html
@@ -14,123 +14,129 @@ rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-<header>
-    <a href=""><span>WEB</span>STUDIO</a>
-    <nav>
-        <ul>
-            <li><a href="" target="_blank">Studio</a></li>
-            <li><a href="" target="_blank">Portfolio</a></li>
-            <li><a href="" target="_blank">Contacts</a></li>
+<header class="header"> 
+    <a href="" class="header-logo">WEB<span class="header-logo-black">STUDIO</span></a>
+    <nav class="header-navigation"> 
+        <ul class="header-navigation-list"> 
+            <li class="header-navigation-list-item"><a href="" target="_blank" class="header-navigation-list-item-link">Studio</a></li>
+            <li class="header-navigation-list-item"><a href="" target="_blank" class="header-navigation-list-item-link">Portfolio</a></li>
+            <li class="header-navigation-list-item"><a href="" target="_blank" class="header-navigation-list-item-link">Contacts</a></li>
         </ul>
     </nav>
-    <address>
-        <ul>
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
+    <address class="header-contact">
+        <ul class="header-contact-list">
+            <li class="header-contact-list-item">
+                <a href="mailto:info@devstudio.com" class="header-contact-list-item-link">info@devstudio.com</a> <br />
             </li>
-            <li>
-                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <li class="header-contact-list-item">
+                <a href="tel:+110001111111" class="header-contact-list-item-link">+11 (000) 111-11-11</a>
             </li>
         </ul>
     </address>
 </header>    
 <main>
-    <h1>Effective Solutions for Your Business</h1>
-    <button type="button">Order Service</button>
- <section>
-    <h2>Main information</h2>
-        <ul>
-            <li>
-                <h3>Strategy</h3>
-                <p>Our goal is to identify the business
+    <h1 class="main-title">Effective Solutions for Your Business</h1>
+    <button type="button" class="main-btn">Order Service</button>
+ <section class="information"> 
+    <h2 class="information-title visually-hidden">Main information</h2>
+        <ul class="information-list">
+            <li class="information-list-item">
+                <h3 class="information-subtitle">Strategy</h3>
+                <p class="information-item-text">Our goal is to identify the business
                     problem to walk away with the perfect and creative solution. </p>
             </li>
-            <li>
-                <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            <li class="information-list-item">
+                <h3 class="information-subtitle">Punctuality</h3>
+                <p class="information-item-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <li>
-                <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            <li class="information-list-item">
+                <h3 class="information-subtitle">Diligence</h3>
+                <p class="information-item-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
-            <li>
-                <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            <li class="information-list-item">
+                <h3 class="information-subtitle">Technologies</h3>
+                <p class="information-item-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
         </ul>
     </section>
-    <section>
-        <h2>Out Team</h2>
-            <ul>
-                <li>
-                    <img src="./images/mark.jpg" alt="Mark Guerrero"
+    <section class="teammembers">
+        <h2 class="teammembers-title">Out Team</h2>
+            <ul class="teammembers-list">
+                <li class="teammembers-list-item">
+                    <img src="./images/mark.jpg" alt="Mark Guerrero" class="teammembers-image"
                     width="264"
                     height="260">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="teammembers-subtitle">Mark Guerrero</h3>
+                    <p class="teammembers-item-text">Product Designer</p>
                 </li>
-                <li>
-                    <img src="./images/tom.jpg" alt="Tom Ford"
+                <li class="teammembers-list-item">
+                    <img src="./images/tom.jpg" alt="Tom Ford" class="teammembers-image"
                     width="264"
                     height="260">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="teammembers-subtitle">Tom Ford</h3>
+                    <p class="teammembers-item-text">Frontend Developer</p>
                 </li>
-                <li>
-                    <img src="./images/camila.jpg" alt="Camila Garcia"
+                <li class="teammembers-list-item">
+                    <img src="./images/camila.jpg" alt="Camila Garcia" class="teammembers-image"
                     width="264"
                     height="260">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="teammembers-subtitle">Camila Garcia</h3>
+                    <p class="teammembers-item-text">Marketing</p>
                 </li>
-                <li>
-                    <img src="./images/daniel.jpg" alt="Daniel Wilson"
+                <li class="teammembers-list-item">
+                    <img src="./images/daniel.jpg" alt="Daniel Wilson" class="teammembers-image"
                     width="264"
                     height="260">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="teammembers-subtitle">Daniel Wilson</h3>
+                    <p class="teammembers-item-text">UI Designer</p>
                 </li>
             </ul>
         </section>
-<section>
-    <h2>Our Portfolio</h2>
-    <ul>
-        <li>
-            <img src="./images/image-1.jpg" alt="bank app">
-            <h3>Banking App</h3>
-            <p>App</p>
+<section class="service">
+    <h2 class="service-title">Our Portfolio</h2>
+    <ul class="service-list">
+        <li class="service-list-item">
+            <img src="./images/image-1.jpg" alt="bank app"
+            class="service-image">
+            <h3 class="service-subtitle">Banking App</h3>
+            <p class="service-item-text">App</p>
         </li>
-        <li>
-            <img src="./images/image-2.jpg" alt="scanning qr-code">
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+        <li class="service-list-item">
+            <img src="./images/image-2.jpg" alt="scanning qr-code"
+            class="service-image">
+            <h3 class="service-subtitle">Cashless Payment</h3>
+            <p class="service-item-text">Marketing</p>
         </li>
-        <li>
-            <img src="./images/image-3.jpg" alt="laptop with bright screen">
-            <h3>Meditation App</h3>
-            <p>App</p>
+        <li class="service-list-item">
+            <img src="./images/image-3.jpg" alt="laptop with bright screen"
+            class="service-image">
+            <h3 class="service-subtitle">Meditation App</h3>
+            <p class="service-item-text">App</p>
         </li>
-        <li>
-            <img src="./images/image-4.jpg" alt="hands on the wheel of the car">
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+        <li class="service-list-item">
+            <img src="./images/image-4.jpg" alt="hands on the wheel of the car"
+            class="service-image">
+            <h3 class="service-subtitle">Taxi Service</h3>
+            <p class="service-item-text">Marketing</p>
         </li>
-        <li>
-            <img src="./images/image-5.jpg" alt="phone with different wallpapers">
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+        <li class="service-list-item">
+            <img src="./images/image-5.jpg" alt="phone with different wallpapers"
+            class="service-image">
+            <h3 class="service-subtitle">Screen Illustrations</h3>
+            <p class="service-item-text">Design</p>
         </li>
-        <li>
-            <img src="./images/image-6.jpg" alt="girl listening to music in a headphones">
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+        <li class="service-list-item">
+            <img src="./images/image-6.jpg" alt="girl listening to music in a headphones"
+            class="service-image">
+            <h3 class="service-subtitle">Online Courses</h3>
+            <p class="service-item-text">Marketing</p>
         </li>
     </ul>
 </section>
 </main>
-<footer>
-    <a href=""><span>WEB</span>STUDIO</a>
-<p>
+<footer class="footer">
+    <a href="" class="footer-logo">WEB<span class="footer-logo-white">STUDIO</span></a>
+<p class="footer-text">
 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
 </p>
 </footer>
