updated some part of code, remaining to group same css styles

--- a/index.html
+++ b/index.html
@@ -35,32 +35,36 @@ rel="stylesheet">
     </address>
 </header>    
 <main>
-    <h1 class="main-title">Effective Solutions for Your Business</h1>
-    <button type="button" class="main-btn">Order Service</button>
- <section class="information"> 
-    <h2 class="information-title visually-hidden">Main information</h2>
-        <ul class="information-list">
-            <li class="information-list-item">
-                <h3 class="information-subtitle">Strategy</h3>
-                <p class="information-item-text">Our goal is to identify the business
-                    problem to walk away with the perfect and creative solution. </p>
-            </li>
-            <li class="information-list-item">
-                <h3 class="information-subtitle">Punctuality</h3>
-                <p class="information-item-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-            </li>
-            <li class="information-list-item">
-                <h3 class="information-subtitle">Diligence</h3>
-                <p class="information-item-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-            </li>
-            <li class="information-list-item">
-                <h3 class="information-subtitle">Technologies</h3>
-                <p class="information-item-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-            </li>
-        </ul>
+
+       <section class="effective-solution">
+            <h1 class="main-title">Effective Solutions for Your Business</h1>
+            <button type="button" class="main-btn">Order Service</button>
+       </section>
+     <section class="information"> 
+        <h2 class="information-title visually-hidden">Main information</h2>
+            <ul class="information-list">
+                <li class="information-list-item">
+                    <h3 class="information-subtitle">Strategy</h3>
+                    <p class="information-item-text">Our goal is to identify the business
+                        problem to walk away with the perfect and creative solution. </p>
+                </li>
+                <li class="information-list-item">
+                    <h3 class="information-subtitle">Punctuality</h3>
+                    <p class="information-item-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                </li>
+                <li class="information-list-item">
+                    <h3 class="information-subtitle">Diligence</h3>
+                    <p class="information-item-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                </li>
+                <li class="information-list-item">
+                    <h3 class="information-subtitle">Technologies</h3>
+                    <p class="information-item-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+            </ul>
+</section>
     </section>
     <section class="teammembers">
-        <h2 class="teammembers-title">Out Team</h2>
+        <h2 class="teammembers-title">Our Team</h2>
             <ul class="teammembers-list">
                 <li class="teammembers-list-item">
                     <img src="./images/mark.jpg" alt="Mark Guerrero" class="teammembers-image"
