final, ready to upload

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ rel="stylesheet">
             <h1 class="main-title">Effective Solutions for Your Business</h1>
             <button type="button" class="main-btn">Order Service</button>
        </section>
+
      <section class="information"> 
         <h2 class="information-title visually-hidden">Main information</h2>
             <ul class="information-list">
@@ -62,7 +63,7 @@ rel="stylesheet">
                 </li>
             </ul>
 </section>
-    </section>
+
     <section class="teammembers">
         <h2 class="teammembers-title">Our Team</h2>
             <ul class="teammembers-list">
@@ -96,41 +97,48 @@ rel="stylesheet">
                 </li>
             </ul>
         </section>
+
 <section class="service">
     <h2 class="service-title">Our Portfolio</h2>
     <ul class="service-list">
         <li class="service-list-item">
-            <img src="./images/image-1.jpg" alt="bank app"
+            <img src="./images/image-1.jpg" alt="bank app" width="360"
+            height="300"
             class="service-image">
             <h3 class="service-subtitle">Banking App</h3>
             <p class="service-item-text">App</p>
         </li>
         <li class="service-list-item">
-            <img src="./images/image-2.jpg" alt="scanning qr-code"
+            <img src="./images/image-2.jpg" alt="scanning qr-code" width="360"
+            height="300"
             class="service-image">
             <h3 class="service-subtitle">Cashless Payment</h3>
             <p class="service-item-text">Marketing</p>
         </li>
         <li class="service-list-item">
-            <img src="./images/image-3.jpg" alt="laptop with bright screen"
+            <img src="./images/image-3.jpg" alt="laptop with bright screen" width="360"
+            height="300"
             class="service-image">
             <h3 class="service-subtitle">Meditation App</h3>
             <p class="service-item-text">App</p>
         </li>
         <li class="service-list-item">
-            <img src="./images/image-4.jpg" alt="hands on the wheel of the car"
+            <img src="./images/image-4.jpg" alt="hands on the wheel of the car" width="360"
+            height="300"
             class="service-image">
             <h3 class="service-subtitle">Taxi Service</h3>
             <p class="service-item-text">Marketing</p>
         </li>
         <li class="service-list-item">
-            <img src="./images/image-5.jpg" alt="phone with different wallpapers"
+            <img src="./images/image-5.jpg" alt="phone with different wallpapers" width="360"
+            height="300"
             class="service-image">
             <h3 class="service-subtitle">Screen Illustrations</h3>
             <p class="service-item-text">Design</p>
         </li>
         <li class="service-list-item">
-            <img src="./images/image-6.jpg" alt="girl listening to music in a headphones"
+            <img src="./images/image-6.jpg" alt="girl listening to music in a headphones" width="360"
+            height="300"
             class="service-image">
             <h3 class="service-subtitle">Online Courses</h3>
             <p class="service-item-text">Marketing</p>
@@ -138,6 +146,7 @@ rel="stylesheet">
     </ul>
 </section>
 </main>
+
 <footer class="footer">
     <a href="" class="footer-logo">WEB<span class="footer-logo-white">STUDIO</span></a>
 <p class="footer-text">
